--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.1",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "redux-devtools-extension": "^2.13.9"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
