--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.2.7",
+    "@reduxjs/toolkit": "^2.2.8",
     "axios": "^1.7.7",
     "file-saver": "^2.0.5",
     "firebase": "^10.12.5",
@@ -21,9 +21,9 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
     "react-toastify": "^10.0.5",
+    "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
-    "xlsx": "^0.18.5",
-    "redux-devtools-extension": "^2.13.9"
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
