--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "redux": "^5.0.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
+    "swiper": "^11.1.14",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
